[project]
name = "agent-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "google-genai>=1.27.0",
    "langchain>=0.3.27",
    "mcp[cli]>=1.12.2",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
    "union>=0.1.189",
    "uvicorn>=0.35.0",
]
